[package]
edition = "2018"
name = "ropen"
version = "0.1.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
anyhow = "1.0.69"
clap = {version = "3.2.23", features = ["derive"]}
futures-util = "0.3.27"
infer = "0.9.0"
tarpc = { version = "0.29.0", features = ["serde-transport-bincode", "tcp", "serde-transport"] }
tempdir = "0.3.7"
thiserror = "1.0.39"
toml = "0.5.11"
serde = "1.0.155"
tokio = { version = "1.26.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
