[package]
edition = "2018"
name = "ropen"
version = "0.1.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
anyhow = "1.0.70"
clap = {version = "3.2.23", features = ["derive"]}
futures-util = "0.3.28"
infer = "0.9.0"
lazy_static = "*"
tarpc = { version = "0.29.0", features = ["serde-transport-bincode", "tcp", "serde-transport"] }
tempdir = "0.3.7"
thiserror = "1.0.40"
toml = "0.5.11"
serde = "1.0.160"
tokio = { version = "1.27.0", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
