[package]
edition = "2018"
name = "ropen"
version = "0.1.0"

[profile.release]
opt-level = "z"  # Optimize for size.
lto = true

[dependencies]
anyhow = "1.0.75"
clap = {version = "3.2.25", features = ["derive"]}
futures-util = "0.3.29"
infer = "0.9.0"
lazy_static = "*"
tarpc = { version = "0.29.0", features = ["serde-transport-bincode", "tcp", "serde-transport"] }
tempdir = "0.3.7"
thiserror = "1.0.50"
toml = "0.5.11"
serde = "1.0.190"
tokio = { version = "1.33.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
